# rustdesk3

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: Windowsx64Build.yml  flutter-build.yml
flutter/android/: gradle.properties
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/carriez/flutter_hbb/: MainActivity.kt
flutter/lib/: home_page2.dart  main.dart
flutter/lib/mobile/pages/: home_page.dart
flutter/lib/models/: server_model.dart
libs/hbb_common/src/: config.rs
