[package]
name = "your_project"
version = "0.1.0"
build = "build.rs"

# 构建依赖（仅限 Windows）
[build-dependencies]
cc = "1.0"               # C/C++ 编译工具
winapi = { version = "0.3", features = ["winnt"] } # Windows API 绑定
winres = "0.1"           # Windows 资源编译器

# Opus 库链接（假设已通过 vcpkg 安装）
[dependencies]
magnum-opus = "0.5"      # 需确保与 vcpkg 安装的 Opus 版本兼容
